--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Permission Denied</title>
+    <title>Logged out</title>
 </head>
 <body>
-You do not have the permission to view this page. Please make sure that you have entered the website using the link
-given on Qualtrics.
+You have successfully logged out. You can now try another condition.
 </body>
+<footer>
+    <script>
+        localStorage.setItem('applicationState', {});</script>
+</footer>
 </html>
