--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -9,6 +9,6 @@ You have successfully logged out. You can now try another condition.
 </body>
 <footer>
     <script>
-        localStorage.setItem('applicationState', {});</script>
+        localStorage.removeItem('applicationState');</script>
 </footer>
 </html>
